bugs in stretching fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -97,7 +97,7 @@ h3 {
     // margin-bottom: 27px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 998px) {
     .container {
         max-width: 548px;
     }
@@ -157,6 +157,7 @@ h3 {
     }
 
     .paralax {
+        height: 100%;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -165,7 +166,7 @@ h3 {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 998px) {
     .banner {
         height: 405px;
         background: url("/IMG/Tablet.png") center/cover no-repeat;
@@ -185,6 +186,10 @@ h3 {
                 font-size: 13.743px;
             }
         }
+    }
+
+    .paralax {
+        height: 100%;
     }
 }
 
@@ -256,6 +261,8 @@ h3 {
             flex-direction: column;
             justify-content: flex-end;
             box-shadow: none;
+            cursor: default;
+
             &:hover {
                 transform: none;
             }
@@ -275,7 +282,7 @@ h3 {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 998px) {
     .categories {
         margin-top: 51px;
 
@@ -321,16 +328,17 @@ h3 {
 .instructions {
     margin-top: 80px;
     max-height: 802px;
-    height: 80vh;
+    // height: 80vh;
+    // height: 98rem;
     border-radius: 11px;
     background: var(--light-blue, #f3f5fc);
-    // padding: 22px 0;
     padding: 2.25vh 0 6vh 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     p {
+        margin-top: 1.35vw;
         font-size: 1.6vw;
         font-weight: 500;
         line-height: 114%;
@@ -365,6 +373,7 @@ h3 {
     }
 
     &__button {
+        margin-top: 1.6vw;
         max-width: 1147px;
         width: 80%;
         border-radius: 11px;
@@ -390,7 +399,8 @@ h3 {
         }
 
         img {
-            height: 9.5vh;
+            // height: 9.5vh;
+            height: 5vw;
             transition: transform 0.2s ease;
         }
 
@@ -404,7 +414,7 @@ h3 {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 998px) {
     .instructions {
         margin-top: 40px;
         height: 305px;
@@ -495,7 +505,7 @@ h3 {
 
         a {
             height: 70%;
-            min-height: 101px;
+            max-height: 101px;
             width: 40%;
             max-width: 474px;
             margin-right: 51px;
@@ -553,7 +563,7 @@ h3 {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 998px) {
     .bottom {
         margin-top: 86px;
         height: 281px;
@@ -586,7 +596,7 @@ h3 {
 
                 img {
                     height: 28px;
-                    margin-left: 3px;
+                    margin-left: 13px;
                 }
 
                 &:hover {
@@ -610,17 +620,19 @@ h3 {
         }
 
         .points {
+            width: 104px;
             top: 20%;
             right: -8%;
-            overflow: hidden;
         }
 
         .arrow {
+            height: 116px;
             right: 30%;
             top: 90%;
         }
 
         .sphere {
+            height: 150px;
             top: -75%;
             left: -15%;
         }
